[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[project]
name = "rt"
version = "0.0.0"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "rototrans"
readme = "README.md"
requires-python = ">=3.6"

dependencies = ["numpy","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","simpleitk>2.0","matplotlib","scikit-image","PyWavelets","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git",]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erosmontin/pyable"
"Bug Tracker" = "https://github.com/erosmontin/pyable/issues"
